public class AllSettingsKeys
{
    public static readonly string PET = "Pet";
    public static readonly string ACTIONS = "Actions";
    //All Actions
    public static readonly string FIRE = "Fire";
    public static readonly string CROUCH = "Crouch";
    public static readonly string USE = "Use";
    public static readonly string JUMP = "Jump";
    public static readonly string ADS = "Ads";
    public static readonly string SWAP_GUN = "SwapGun";
    //Rebinds Names
    public static readonly string APEX_REBINDS = "ApexRebinds";
    public static readonly string UNIVERSAL_REBINDS = "UniversalRebinds";
    public static readonly string VALORANT_REBINDS = "ValorantRebinds";
    public static readonly string CSGO_REBINDS = "CSGORebinds";
    //Apex and Universal Settings
    public static readonly string AUTO_RELOAD = "AutoReload";
    public static readonly string AUTO_COMPENSATION = "AutoCompensation";
    public static readonly string CHOOSEN_WEAPON = "ChoosenWeapon";
    public static readonly string RECOIL_ACTIVE = "RecoilActive";
    public static readonly string SPREAD_ACTIVE = "SpreadActive";
    public static readonly string EXPANDED_SETTINGS = "ExpandedSettings";
    public static readonly string AIM_ASSIST = "AimAssist";
    public static readonly string CL_SENSITIVITY= "ClassicSensitivity";
    public static readonly string CL_ADS_SENSITIVITY = "ClassicAdsSensitivity";
    public static readonly string HORIZONTAL = "Horizontal";
    public static readonly string VERTICAL = "Vertical";
    public static readonly string EXTRA_HORIZONTAL = "ExtraHorizontal";
    public static readonly string EXTRA_VERTICAL = "ExtraVertical";
    public static readonly string ADS_HORIZONTAL = "AdsHorizontal";
    public static readonly string ADS_VERTICAL = "AdsVertical";
    public static readonly string EXTRA_ADS_HORIZONTAL = "ExtraAdsHorizontal";
    public static readonly string EXTRA_ADS_VERTICAL = "ExtraAdsVertical";
    public static readonly string OUTER_TRESHOLD = "OuterTreshold";
    public static readonly string DEADZONE = "DeadZone";
    public static readonly string CL_DEADZONE = "ClassicDeadzone";
    public static readonly string RECOIL_CURVE = "RecoilCurve";
    public static readonly string CL_RECOIL_CURVE = "ClassicCurve";
    public static readonly string RAMPTIME = "RampTime";
    public static readonly string DELAY = "Delay";
    public static readonly string ADS_RAMPTIME = "AdsRampTime";
    public static readonly string ADS_DELAY = "AdsDelay";
    //Valorant Settings
    public static readonly string PERFORM_SNIPER = "PerformSniper";
    public static readonly string SENSITIVITY = "Sensitivity";
    public static readonly string ADS_SENSITIVITY = "AdsSensitivity";
    public static readonly string SCOP_SENSITIVITY = "ScopSensitivity";
}
